removed worker package
