# internal/server/task.go
@@ -1,14 +1,19 @@
 package server
 
 import (
+	"encoding/json"
 	"errors"
+	"fmt"
 	"log"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5/pgtype"
 
 	db "task-manager/internal/database/sqlc"
+	"task-manager/internal/token"
 	"task-manager/util"
 )
 
@@ -80,8 +85,13 @@ func (s *Server) GetTask(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, HandleError(err, http.StatusBadRequest, "Invalid task ID"))
 		return
 	}
+	taskID, err := uuid.Parse(taskReq.ID)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, HandleError(err, http.StatusBadRequest, "Invalid task ID"))
+		return
+	}
 
-	task, err := s.db.GetTask(ctx, taskReq.ID)
+	task, err := s.db.GetTask(ctx, taskID)
 	if err != nil {
 		if errors.Is(err, db.ErrRecordNotFound) {
 			ctx.JSON(http.StatusNotFound, HandleError(err, http.StatusNotFound, "Task not found"))
@@ -94,7 +104,61 @@ func (s *Server) GetTask(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, task)
 }
 
-// @Summary		Create Task
+// @Summary		Long Poll Task Status
+// @Description	Wait until a task's status changes from PENDING before responding
+// @Tags			tasks
+// @Accept			json
+// @Produce		json
+// @Security BearerAuth
+// @Param id path string true "Task ID (UUID format)"
+// @Success		200	{object}	Message
+// @Failure		400	{object}	ErrorResponse
+// @Failure		404	{object}	ErrorResponse
+// @Failure		500	{object}	ErrorResponse
+// @Router			/task/{id}/status [get]
+func (s *Server) LongPollTaskStatus(ctx *gin.Context) {
+	var taskReq TaskRequest
+	if err := ctx.ShouldBindUri(&taskReq); err != nil {
+		ctx.JSON(http.StatusBadRequest, HandleError(err, http.StatusBadRequest, "Invalid task ID"))
+		return
+	}
+
+	taskID, err := uuid.Parse(taskReq.ID)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, HandleError(err, http.StatusBadRequest, "Invalid task ID"))
+		return
+	}
+
+	timeout := 30 // seconds
+	for i := 0; i < timeout; i++ {
+		task, err := s.db.GetTask(ctx, taskID)
+		if err != nil {
+			if errors.Is(err, db.ErrRecordNotFound) {
+				ctx.JSON(http.StatusNotFound, HandleError(err, http.StatusNotFound, "Task not found"))
+				return
+			}
+			ctx.JSON(http.StatusInternalServerError, HandleError(err, http.StatusInternalServerError, "Error retrieving task"))
+			return
+		}
+
+		// If the status is no longer PENDING, return immediately
+		if task.Status.TaskStatus != db.TaskStatusPENDING {
+			ctx.JSON(http.StatusOK, Message{
+				TaskID:  task.ID.String(),
+				Message: fmt.Sprintf("Task status updated - %v", task.Status),
+			})
+			return
+		}
+
+		// Wait for 1 second before checking again
+		time.Sleep(1 * time.Second)
+	}
+
+	// If timeout reached and task is still pending, return timeout response
+	ctx.JSON(http.StatusRequestTimeout, HandleError(nil, http.StatusRequestTimeout, "Task is still pending, try again later"))
+}
+
+// @Summary		reate Task
 // @Description	Create a new task
 // @Tags			tasks
 // @Accept			json
@@ -111,11 +175,12 @@ func (s *Server) CreateTask(ctx *gin.Context) {
 	}
 
 	// Apply rate limiting
-	userID := ctx.GetString("user_id") // Assume user_id is extracted from JWT
-	limiter := getRateLimiter(userID)
+	userID := ctx.MustGet(authorizationPayloadKey).(*token.Payload).UserID
+
+	limiter := getRateLimiter(userID.String())
 
 	if !limiter.Allow() {
-		ctx.JSON(http.StatusTooManyRequests, gin.H{"error": "Too many requests. Please slow down."})
+		ctx.JSON(http.StatusTooManyRequests, HandleError(nil, http.StatusTooManyRequests, "too many requests. please slow down."))
 		return
 	}
 
@@ -124,7 +189,6 @@ func (s *Server) CreateTask(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, HandleError(err, http.StatusBadRequest, "Invalid request"))
 		return
 	}
-	log.Println(task)
 
 	dueTime, err := util.ParseTimeString(task.DueTime)
 	if err != nil {
@@ -132,7 +196,6 @@ func (s *Server) CreateTask(ctx *gin.Context) {
 		return
 	}
 
-	log.Println(dueTime)
 	taskArg := db.CreateTaskParams{
 		UserID:      task.UserID,
 		Title:       task.Title,
@@ -153,13 +216,24 @@ func (s *Server) CreateTask(ctx *gin.Context) {
 		return
 	}
 
-	// taskBytes, err := json.Marshal(task)
-	// if err != nil {
-	// 	ctx.JSON(http.StatusInternalServerError, HandleError(err, http.StatusInternalServerError, "Error serializing task request"))
-	// 	return
-	// }
+	sendTaskPayload := SendTaskPayload{
+		ID:          createdTask.ID,
+		Title:       createdTask.Title,
+		Type:        createdTask.Type,
+		Description: createdTask.Description,
+		UserID:      createdTask.UserID,
+		Priority:    task.Priority,
+		Payload:     createdTask.Payload,
+		DueTime:     createdTask.DueTime,
+	}
 
-	err = s.queueManager.Publish(taskQueue, createdTask.ID.String(), []byte(createdTask.Payload), priorityMap[task.Priority])
+	taskBytes, err := json.Marshal(sendTaskPayload)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, HandleError(err, http.StatusInternalServerError, "Error serializing task request"))
+		return
+	}
+
+	err = s.queueManager.Publish(taskQueue, taskBytes, priorityMap[task.Priority])
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, HandleError(err, http.StatusInternalServerError, "Error Publishing Task to queue"))
 		return
